@@ -1,3 +1,15 @@
+** v4.69, 20.12.2020**
+* Updated GarrisonUI Skin
+* Updated CovenantRenown Skin
+* Added back the Quick Join messages to my notification
+* Updated some utility items for the AutoButtons
+* Update my item alerts
+* Added right click to EncounterJournal Button on the MicroBar to open Weekly Rewards
+* Added some hearthstones to the MicroBar and LocPanel
+* Updated ChatLinks
+* Updated some reminders
+
+
 ** v4.68, 05.12.2020**
 * AutoButtons: Added a new category: FOODVENDOR
 * Added some more vignettes to be ignored. Thx isp
